Simplify location structure
